--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "proxy": "http://localhost:5175"
+    "proxy": "http://localhost:5175",
+    "clean:dev": "rm -rf node_modules/.vite dist && npm run dev"
   },
   "dependencies": {
     "@nhl-api/players": "^3.1.4",
