--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nhl-api/players": "^3.1.4",
     "@tailwindcss/vite": "^4.1.8",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
