--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
